@@ -42,8 +42,8 @@ NEWS
 
     Transition completed for:
     https://github.com/jaalto/project-emacs--tinydesk
+    https://github.com/jaalto/project-emacs--tinymacro
     https://github.com/jaalto/emacs-epackage--lib-date-parse
     https://github.com/jaalto/emacs-epackage--c-comment-edit-mode
-
 
 End of file
